Support and display YAML-Block contents
Must be switched on in Settings / Markdown / Show YAML-Block.

These points apply:
* keys must consist of alpha-numeric characters, no spaces, punctuation,
  etc.
* attribute values are either strings or lists
* the `tags attribute` is special: if it's a string of comma-separated
  values, it is split into a real list
* single or double quotes surrounding a string are removed

The following two `tags` values are equivalent:

```
---
tags:
  - tag1
  - tag2
tags: tag1, tag2
---
```

Assume this block:

```
---
foo: bar
tags: tag1, tag2, tag3
alist:
  - an item
  - another item
---
```

The resulting HTML is:

```
<div class='yaml-front-matter-container'>
  <div class='yaml-front-matter yaml-foo-container'>
    <span class='yaml-foo-item'>
      bar
    </span>
  </div>
  <div class='yaml-front-matter yaml-tags-container'>
    <span class='yaml-tags-item'>
      tag1
    </span>
    <span class='yaml-tags-item'>
      tag2
    </span>
    <span class='yaml-tags-item'>
      tag3
    </span>
  </div>
  <div class='yaml-front-matter yaml-alist-container'>
    <span class='yaml-alist-item'>
      an item
    </span>
    <span class='yaml-alist-item'>
      another item
    </span>
  </div>
</div>
```

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -242,6 +242,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="description">Beschreibung</string>
     <string name="edit_picture">Bild bearbeiten</string>
     <string name="math">Mathematik</string>
+    <string name="yaml">YAML-Block anzeigen</string>
     <string name="table_of_contents">Inhaltsverzeichnis</string>
     <string name="miscellaneous">Verschiedenes</string>
     <string name="textaction">Text Aktion</string>
