Only show selected attributes
Specify which attributes to show in Settings / Markdown / YAML Block:

* '': don't show any attributes
* '*': show all attributes
* 'attr1, attr2, ...': only show selected attributes

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -243,6 +243,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="edit_picture">Bild bearbeiten</string>
     <string name="math">Mathematik</string>
     <string name="yaml">YAML-Block anzeigen</string>
+    <string name="list_given_yaml_attributes">Gib die YAMl-Attribute an, die angezeigt werden sollen. \'\' deaktiviert, \'*\' um alle anzuzeigen, \'foo, bar, ...\' um Attribute zu wählen. </string>
     <string name="table_of_contents">Inhaltsverzeichnis</string>
     <string name="miscellaneous">Verschiedenes</string>
     <string name="textaction">Text Aktion</string>
