--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -298,12 +298,12 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="view_mode">Modo de visualização</string>
     <string name="edit_mode">Modo de edição</string>
     <string name="mount_storage">Acessar armazenamento</string>
-    <string name="application_needs_access_to_storage_mount_it">É necessário permissão para acessar este armazenamento. Faça a montagem para permitir o acesso à ele, confirme o diálogo exibido e selecione o armazenamento, clicando em \"selecione\".</string>
+    <string name="application_needs_access_to_storage_mount_it">É necessário permissão para acessar este armazenamento. Monte o armazenamento para permitir o acesso a ele, confirme o diálogo exibido e selecione o armazenamento, clicando em \"selecione\".</string>
     <string name="share_into">Compartilhar para</string>
     <string name="favourite">Favorito</string>
     <string name="favourites">Favoritos</string>
     <string name="please_wait">Por favor aguarde</string>
-    <string name="app_start_folder">Pasta inicial do app</string>
+    <string name="app_start_folder">Pasta inicial do aplicativo</string>
     <string name="tab_width">Largura da aba</string>
     <string name="amount_of_space_for_tab">Quantidade de espaços para exibir tabulação</string>
     <string name="selected_file_may_be_a_textfile_want_to_open_in_editor">O arquivo selecionado pode ser um arquivo de texto puro. Você quer abri-lo no editor, ou em outro aplicativo?\n\nNão tente abrir arquivos binários. Se não tem certeza, abra com outro aplicativo.</string>
