--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -258,7 +258,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="edit_picture">Edit picture</string>
     <string name="math">Math</string>
     <string name="yaml">Show Front Matter</string>
-    <string name="enter_yaml_front_matter_keys_to_display">Enter YAML front matter keys to display at the predefined header. Enter keys separated by commas. Leave empty for none or use \'*\' for all. \n\nIf you have any key, i.e. title: "Hello" defined and there is {{ page.title }} in your text, it will always be replaced. You can make a custom front matter display this way.</string>
+    <string name="enter_yaml_front_matter_keys_to_display">Enter YAML front matter keys to display at the predefined header. Enter keys separated by commas. Leave empty for none or use \'*\' for all. \n\nIf you have any key, i.e. title: "Hello" defined and there is {{ post.title }} in your text, it will always be replaced. You can make a custom front matter display this way.</string>
     <string name="table_of_contents">Table of contents</string>
     <string name="miscellaneous">Miscellaneous</string>
     <string name="textaction">Text action</string>
