--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -242,6 +242,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="description">Descrição</string>
     <string name="edit_picture">Editar imagem</string>
     <string name="math">Matemática</string>
+    <string name="enter_yaml_front_matter_attributes_to_show">Digite os atributos de Matérias Virtuais YAML a serem exibidos no início dos documentos visualizados. cabeçalho. Insira as teclas separadas por vírgulas. Deixe em branco para nenhum ou use \'*\' para todos. \n\nSe você tem alguma chave, ou seja, title: \'Olá\' definido e há {{ post.title }} no seu texto, ele sempre será substituído. Você pode fazer uma frente personalizada exibir desta maneira.</string>
     <string name="table_of_contents">Tabela de conteúdos</string>
     <string name="miscellaneous">Diversos</string>
     <string name="textaction">Ações de texto</string>
