--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -377,4 +377,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="skip_all">全部跳過</string>
     <string name="overwrite_all">全部覆寫</string>
     <string name="infinite">無限</string>
+    <string name="auto_format">自動格式化</string>
 </resources>
